# air-quality-index

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
airqualityindex/: __init__.py  contactapi.py  waqi.py
tests/: test_404_error.py
