[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name= airqualityindex
license_files = LICENSE.txt
summary = An educational project to learn about REST API and unit testing
long_description = file: README.md
author = Francesco Cremonesi
author_email = francesco.cremonesi0@gmail.com
long_description_content_type = text/markdown
url = 'https://github.com/sharkovsky/air-quality-index'
classifiers = Development Status :: 3 - Alpha
              Intended Audience :: Developers
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.4
              Programming Language :: Python :: 3.5
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7

[bdist_wheel]
universal = 1

[flake8]
exclude = venv, docs, contrib
ignore = E221, E226, E701
max-line-length = 88

[tool:pytest]
addopts = tests --verbose
